adding three.js

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,10 +8,24 @@
 <body>
     <h1>Welcome to my 3D Website</h1>
     
-    <!-- Spline Viewer -->
     <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.3/build/spline-viewer.js"></script>
     <spline-viewer url="https://prod.spline.design/E68XfxviEA1hsvZw/scene.splinecode"></spline-viewer>
     
     <p>More content will go here soon...</p>
 </body>
+</html>
+-->
+
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title>three.js app</title>
+		<style>
+			body { margin: 0; }
+		</style>
+	</head>
+	<body>
+		<script type="module" src="/main.js"></script>
+	</body>
 </html>
