--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- CHECK FIREFOX DEBIUG MENU IM PRETTY SURE ITS AN EASY FIX-->
 <html lang="en">
 	<head>
 		<title>three.js webgl - effects - ascii</title>
@@ -13,7 +14,7 @@
 				<ul>
 					<li><a href="#home">Home</a></li>
 					<li><a href="#projects">GitHub Projects</a></li>
-					<li><a href="#tools">Tools</a></li>
+					<li><a href="#tools">Toolsz</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -103,8 +104,6 @@
 
 			}
 
-			//
-
 			function animate() {
 
 				const timer = Date.now() - start;
@@ -120,6 +119,6 @@
 			}
 
 		</script>
-
+ 
 	</body>
 </html>
