changed gitignore to be more clean, addedd note to index for future plans (menu)

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- CHECK FIREFOX DEBIUG MENU IM PRETTY SURE ITS AN EASY FIX-->
+<!--OK SITE IS UP AND WORKING NOW TO ADD MENU-->
 <html lang="en">
 	<head>
 		<title>three.js webgl - effects - ascii</title>
