i literally dk what changed

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<!--OK SITE IS UP AND WORKING NOW TO ADD MENU-->
+<!-- OK SITE IS UP AND WORKING NOW TO ADD MENU -->
+<!-- IDEAS FOR MENU: -->
+<!-- "Art I like" (can be in a database with art image??, title, artist+artist birth and death??, date of creation,  )-->
+ <!-- "Projects" (can be small cards explaining each of my projects, why I made them, what I learned etc) -->
 <html lang="en">
 	<head>
 		<title>three.js webgl - effects - ascii</title>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+
 		<script type="importmap">
 			{
 				"imports": {
@@ -31,7 +35,8 @@
 		<div id="info">...</div>
 
 
-
+
+
  
 	</body>
 </html>
