setting up menu

--- a/index.html
+++ b/index.html
@@ -2,22 +2,34 @@
 <!--OK SITE IS UP AND WORKING NOW TO ADD MENU-->
 <html lang="en">
 	<head>
-		<title>three.js webgl - effects - ascii</title>
+		<title>Kizovani</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link type="text/css" rel="stylesheet" href="main.css">
 	</head>
 
 	<body>
-		<div id="menu-overlay">
-			<nav>
-				<ul>
-					<li><a href="#home">Home</a></li>
-					<li><a href="#projects">GitHub Projects</a></li>
-					<li><a href="#tools">Toolsz</a></li>
-				</ul>
-			</nav>
+		<div id="menu-container">
+			<div class="col col-1">
+				<div class="menu-item" id="'menu-toggle">menu</div>
+			</div>
+			<div class="col col2">
+				<div class="menu-item">Close</div>
+				<div class="menu-item">Home</div>
+				<div class="menu-item">Tools</div>
+				<div class="menu-item">Projects</div>
+				<div class="menu-item">Art I like</div>
+				<div class="menu-item">Contact</div>
+				<div class="menu-item">Info About This Website</div>
+			</div>
 		</div>
+
+		<div class="marquee-container">
+			<div class="marquee">
+				home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home home 
+			</div>
+		</div>
+
 		
 		<div id="info">...</div>
 
