--- a/index.html
+++ b/index.html
@@ -210,6 +210,6 @@
 		</script>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.1/gsap.min.js"></script>
-		<script src="/main.js"></script>
+        <script type="module" src="/main.js"></script>
 	</body>
 </html>
