three.js viewer now fullscreen and menu is overlayed

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         }
     </script>
 
+<div class="three-js-container">
     <script type="module">
 
 			import * as THREE from 'three';
@@ -244,6 +245,7 @@
 				effect.setSize(window.innerWidth, window.innerHeight);
 			}
 		</script>
+</div>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.1/gsap.min.js"></script>
         <script type="module" src="/main.js"></script>
