--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+	<div id="three-js-container"></div>
+
     <div class="menu-container">
         <div class="col col-1">
             <div class="menu-item" id="menu-toggle">menu</div>
@@ -43,7 +45,6 @@
         }
     </script>
 
-<div class="three-js-container">
     <script type="module">
 
 			import * as THREE from 'three';
@@ -141,7 +142,7 @@
 				effect.domElement.style.backgroundColor = 'black';
 
 
-				document.body.appendChild(effect.domElement);
+				document.getElementById('three-js-container').appendChild(effect.domElement);
 
 				controls = new OrbitControls(camera, effect.domElement);
 
@@ -245,7 +246,7 @@
 				effect.setSize(window.innerWidth, window.innerHeight);
 			}
 		</script>
-</div>
+
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.1/gsap.min.js"></script>
         <script type="module" src="/main.js"></script>
