slider added and working

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
 	<div id="three-js-container"></div>
+    <input type="range" id="light-rotation-slider" min="0" max="360" value="0">
 
     <div class="menu-container">
         <div class="col col-1">
