--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<!-- TODO: CENTER MODEL PLEASE LMFAO -->
+<!-- TODO: MAKE SLIDER LOOK NICE (MINIMAL) AND MAKE IT APPEAR WHEN YOU DRAG YOUR MOUSE TO THE BOTTOM OF THE SCREEN
+TODO: ADD TEXT -->
 <!-- TODO: FIGURE OUT PHOTO STORAGE??? -->
-<!-- TODO: ADD TEXT AND EASTER EGG -->
+<!-- TODO: ADD EASTER EGG -->
 
 <!DOCTYPE html>
 <html lang="en">
