--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!-- TODO: PLEASE GOD FIX THE three-scene.js loading process its so bad atm, and please make the slider pretty -->
-<!-- TODO: MAKE SLIDER LOOK NICE (MINIMAL) AND MAKE IT APPEAR WHEN YOU DRAG YOUR MOUSE TO THE BOTTOM OF THE SCREEN
-TODO: ADD TEXT -->
+<!-- TODO: MAKE SLIDER AND TOGGLE LOOK NICE -->
+<!-- ADD TEXT -->
 <!-- TODO: ADD TOGGLE FOR AMBIENT LIGHT -->
 <!-- TODO: FIGURE OUT PHOTO STORAGE??? -->
 <!-- TODO: ADD EASTER EGG -->
@@ -15,16 +14,27 @@ TODO: ADD TEXT -->
 </head>
 
 <body>
+
+    <div class="text-container">
+        <div class="nametag">k i z o v a n i</div>
+        <div class="welcome-text">hello</div>
+    </div>
+
     <div id="three-js-container"></div>
 
     <div class="controls-container">
         <input type="range" id="light-rotation-slider" min="0" max="360" value="0">
+
+        <!-- code that I found from yt for a better toggle button -->
+        <!-- <input type="checkbox" class="toggle" id="ambient-light-switch" checked/>
+        <label for="default" data-checked="ON" data-unchecked="OFF"></label> -->
+
         <label class="switch">
             <input type="checkbox" id="ambient-light-switch" checked>
             <span class="slider"></span>
         </label>
     </div>
-    
+
     <div class="menu-container">
         <div class="col col-1">
             <div class="menu-item" id="menu-toggle">menu</div>
@@ -56,7 +66,11 @@ TODO: ADD TEXT -->
 
     <script type="module" src="./three-scene.js"></script>
 
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/baffle/0.3.6/baffle.min.js"></script> -->
+
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.1/gsap.min.js"></script>
+
         <script type="module" src="/main.js"></script>
+
 	</body>
 </html>
