text animation working, project page layout started.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!-- TODO: MAKE SLIDER AND TOGGLE LOOK NICE -->
-<!-- ADD TEXT -->
-<!-- TODO: ADD TOGGLE FOR AMBIENT LIGHT -->
+<!-- TODO: WORK ON PROJECTS PAGE, FIND A WAY TO MAKE THE CARDS LOOK COOL -->
+<!-- TODO: MAKE SLIDER AND TOGGLE LOOK NICE AND ADD HIDING/ANIMATION EFFECTS PLEASE -->
 <!-- TODO: FIGURE OUT PHOTO STORAGE??? -->
 <!-- TODO: ADD EASTER EGG -->
 
@@ -15,9 +14,12 @@
 
 <body>
 
-    <div class="text-container">
-        <div class="nametag">k i z o v a n i</div>
-        <div class="welcome-text">hello</div>
+    <div class="nametag-container">
+        <div class="nametag">kizovani</div>
+    </div>
+
+    <div class="welcome-text-container">
+        <span class="welcome-text">TESTING</span>
     </div>
 
     <div id="three-js-container"></div>
@@ -41,8 +43,8 @@
         </div>
         <div class="col col-2">
             <div class="menu-item" id="close-menu">close</div>
-            <div class="menu-item">home</div>
-            <div class="menu-item">projects</div>
+            <div class="menu-item"><a href="index.html">home</a></div>
+            <div class="menu-item"><a href="projects.html">projetc</a></div>
             <div class="menu-item">art i like</div>
             <div class="menu-item">info</div>
             <div class="menu-item">contact</div>
