--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="welcome-text-container">
-        <span class="welcome-text">TESTING</span>
+        <span class="welcome-text">X?/%6@</span>
     </div>
 
     <div id="three-js-container"></div>
@@ -44,7 +44,7 @@
         <div class="col col-2">
             <div class="menu-item" id="close-menu">close</div>
             <div class="menu-item"><a href="index.html">home</a></div>
-            <div class="menu-item"><a href="projects.html">projetc</a></div>
+            <div class="menu-item"><a href="projects.html">projects</a></div>
             <div class="menu-item">art i like</div>
             <div class="menu-item">info</div>
             <div class="menu-item">contact</div>
