completely Reorganized main.js, now divided up into shared and unique functions. Model now should be much easier to handle fixed color links, made project cards, change. If something broke it happened here lol.

--- a/projects.html
+++ b/projects.html
@@ -16,13 +16,23 @@
     <div id="projects-container">
         <!-- Project cards will go here -->
         <div class="project-card">
-            <h2>Cryptwolf</h2>
-            <p>JavaFX encryption/decryption tool with support for variable key length, keyfile, and keyphrase support</p>
+            <img class="'cryptwolf-icon" src='PATH_TO_CRYPTWOLF_ICON' alt="CryptWolf Icon">
+            <h2>CryptWolf</h2>
+            <p>a simple JavaFX encryption/decryption tool</p>
+            <div class= "popup">
+                <p>Github</p>
+            </div>
         </div>
+
         <div class="project-card">
+            <img class="traypanda-icon" src="PATH_TO_TRAYPANDA_ICON" alt="TrayPanda Icon">
             <h2>TrayPanda</h2>
-            <p>Python based windows tray tool with many small included tools such as a quote of the day generator and a 20-20-20 timer</p>
+            <p>Python based windows tray tool with many small included tools dasdasdasdasdasdsads adasdsadasdasdasdasddsadsaa</p>
+            <div class="popup">
+                <p>Github</p>
+            </div>
         </div>
+
         <!-- Add more project cards as needed -->
     </div>
 
