fixed link colors and font on projects page

--- a/projects.html
+++ b/projects.html
@@ -20,16 +20,20 @@
             <h2>CryptWolf</h2>
             <p>a simple JavaFX encryption/decryption tool</p>
             <div class= "popup">
-                <p>Github</p>
+                <p>
+                    <a href="https://github.com/Kizovani/CryptWolf" target="_blank">Github</a>
+                </p>
             </div>
         </div>
 
         <div class="project-card">
             <img class="traypanda-icon" src="PATH_TO_TRAYPANDA_ICON" alt="TrayPanda Icon">
             <h2>TrayPanda</h2>
-            <p>Python based windows tray tool with many small included tools dasdasdasdasdasdsads adasdsadasdasdasdasddsadsaa</p>
+            <p>Python based windows tray tool with many small included tools</p>
             <div class="popup">
-                <p>Github</p>
+                <p>
+                    <a href="https://github.com/Kizovani/TrayPanda" target ="_blank">Github</a>
+                </p>
             </div>
         </div>
 
