--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,5 @@
 <!-- TODO: ADD ANIMATION FOR PROJECT CARDS -->
+<!-- TODO: please reword the cards its so bad lmfao -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,8 +21,9 @@
             <h2>CryptWolf</h2>
             <p>a simple JavaFX encryption/decryption tool</p>
             <div class= "popup">
-                <p>
+                <p class="github-link">
                     <a href="https://github.com/Kizovani/CryptWolf" target="_blank">Github</a>
+                    <ion-icon name="link-outline"></ion-icon>
                 </p>
             </div>
         </div>
@@ -31,8 +33,9 @@
             <h2>TrayPanda</h2>
             <p>Python based windows tray tool with many small included tools</p>
             <div class="popup">
-                <p>
+                <p class = "github-link">
                     <a href="https://github.com/Kizovani/TrayPanda" target ="_blank">Github</a>
+                    <ion-icon name="link-outline"></ion-icon>
                 </p>
             </div>
         </div>
@@ -59,6 +62,7 @@
         </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.1/gsap.min.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script type="module" src="/main.js"></script>
 </body>
 </html>
