renamed ambient light button, fixed js to work with new switch, updated todo

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <div id="close-circle" class="circle"></div>
     <input type="range" id="light-rotation-slider" min="0" max="100" value="50">
     <div class="button-container">
-        <input id="toggle-on" class="toggle toggle-left" name="toggle" value="false" type="radio" checked>
-        <label for="toggle-on" class="btn">On</label>
-        <input id="toggle-off" class="toggle toggle-right" name="toggle" value="true" type="radio">
-        <label for="toggle-off" class="btn">Off</label>
+        <input id="ambient-light-on" class="toggle toggle-left" name="ambient-light-toggle" value="on" type="radio" checked>
+        <label for="ambient-light-on" class="btn">On</label>
+        <input id="ambient-light-off" class="toggle toggle-right" name="ambient-light-toggle" value="off" type="radio">
+        <label for="ambient-light-off" class="btn">Off</label>
     </div>
     <!-- old switch -->
     <!-- <label class="switch">
