info page html template created, need to add and baffle text, also made the info menu button work and added section in main.js for info page init

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="menu-item"><a href="index.html">home</a></div>
             <div class="menu-item"><a href="projects.html">projects</a></div>
             <div class="menu-item">art i like</div>
-            <div class="menu-item">info</div>
+            <div class="menu-item"><a href="info.html">info</a></div>
             <div class="menu-item">contact</div>
         </div>
     </div>
