--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Kizovani - Projects</title>
+    <title>Kizovani - About</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <link type="text/css" rel="stylesheet" href="main.css">
@@ -11,36 +11,7 @@
 <body>
     
     <div class="welcome-text-container">
-        <span class="welcome-text">MY PROJECTS</span>
-    </div>
-
-    <div id="projects-container">
-        <!-- Project cards will go here -->
-        <div class="project-card">
-            <img class="'cryptwolf-icon" src='PATH_TO_CRYPTWOLF_ICON' alt="CryptWolf Icon">
-            <h2>CryptWolf</h2>
-            <p>a simple JavaFX encryption/decryption tool</p>
-            <div class= "popup">
-                <p class="github-link">
-                    <a href="https://github.com/Kizovani/CryptWolf" target="_blank">Github</a>
-                    <ion-icon name="link-outline"></ion-icon>
-                </p>
-            </div>
-        </div>
-
-        <div class="project-card">
-            <img class="traypanda-icon" src="PATH_TO_TRAYPANDA_ICON" alt="TrayPanda Icon">
-            <h2>TrayPanda</h2>
-            <p>Python based windows tray tool with many small included tools</p>
-            <div class="popup">
-                <p class = "github-link">
-                    <a href="https://github.com/Kizovani/TrayPanda" target ="_blank">Github</a>
-                    <ion-icon name="link-outline"></ion-icon>
-                </p>
-            </div>
-        </div>
-
-        <!-- Add more project cards as needed -->
+    
     </div>
 
     <div class="menu-container">
