icons added, colored and fit properly

--- a/projects.html
+++ b/projects.html
@@ -17,9 +17,9 @@
     <div id="projects-container">
         <!-- Project cards will go here -->
         <div class="project-card">
-            <img class="'cryptwolf-icon" src='PATH_TO_CRYPTWOLF_ICON' alt="CryptWolf Icon">
+            <img class="cryptwolf-icon" src='/res/icons/CryptWolf_Icon_Transparent_Blacked.png' alt="CryptWolf Icon">
             <h2>CryptWolf</h2>
-            <p>a simple JavaFX encryption/decryption tool</p>
+            <p>JavaFX encryption/decryption tool with user defined key length and support for passphrases and keyfiles</p>
             <div class= "popup">
                 <p class="github-link">
                     <a href="https://github.com/Kizovani/CryptWolf" target="_blank">Github</a>
@@ -29,9 +29,9 @@
         </div>
 
         <div class="project-card">
-            <img class="traypanda-icon" src="PATH_TO_TRAYPANDA_ICON" alt="TrayPanda Icon">
+            <img class="traypanda-icon" src="/res/icons/bamboo-canes.png" alt="TrayPanda Icon">
             <h2>TrayPanda</h2>
-            <p>Python based windows tray tool with many small included tools</p>
+            <p>Python based windows tray app with many small included tools, including a 20-20-20 timer, ipconfig info tool, and more</p>
             <div class="popup">
                 <p class = "github-link">
                     <a href="https://github.com/Kizovani/TrayPanda" target ="_blank">Github</a>
