--- a/info.html
+++ b/info.html
@@ -1,5 +1,3 @@
-<!-- TODO: ADD ANIMATION FOR PROJECT CARDS -->
-<!-- TODO: please reword the cards its so bad lmfao -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,8 +8,8 @@
 </head>
 <body>
     
-    <div class="welcome-text-container">
-    
+    <div class="info-text-wall-container">
+        <p>hello this is a test TESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTINGTESTING</p>
     </div>
 
     <div class="menu-container">
