updated to match dev

--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,13 @@
 <!-- TODO: ADD ANIMATION FOR PROJECT CARDS -->
+<!-- TODO: please reword the cards its so bad lmfao -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Kizovani - Projects</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <script type="module" crossorigin src="/assets/main-B2ZN297p.js"></script>
-  <link rel="stylesheet" crossorigin href="/assets/main-CurDkPs5.css">
+  <script type="module" crossorigin src="/assets/main-Bf2mR_E6.js"></script>
+  <link rel="stylesheet" crossorigin href="/assets/main-u3h6oT5a.css">
 </head>
 <body>
     
@@ -17,23 +18,25 @@
     <div id="projects-container">
         <!-- Project cards will go here -->
         <div class="project-card">
-            <img class="'cryptwolf-icon" src='PATH_TO_CRYPTWOLF_ICON' alt="CryptWolf Icon">
+            <img class="cryptwolf-icon" src='/assets/CryptWolf_Icon_Transparent_Blacked-bD0lfKD3.png' alt="CryptWolf Icon">
             <h2>CryptWolf</h2>
-            <p>a simple JavaFX encryption/decryption tool</p>
+            <p>JavaFX encryption/decryption tool with user defined key length and support for passphrases and keyfiles</p>
             <div class= "popup">
-                <p>
+                <p class="github-link">
                     <a href="https://github.com/Kizovani/CryptWolf" target="_blank">Github</a>
+                    <ion-icon name="link-outline"></ion-icon>
                 </p>
             </div>
         </div>
 
         <div class="project-card">
-            <img class="traypanda-icon" src="PATH_TO_TRAYPANDA_ICON" alt="TrayPanda Icon">
+            <img class="traypanda-icon" src="/assets/bamboo-canes-BkQJU9Cg.png" alt="TrayPanda Icon">
             <h2>TrayPanda</h2>
-            <p>Python based windows tray tool with many small included tools</p>
+            <p> Python based windows tray app with many small included tools, including a 20-20-20 timer, ipconfig info tool, and more</p>
             <div class="popup">
-                <p>
+                <p class = "github-link">
                     <a href="https://github.com/Kizovani/TrayPanda" target ="_blank">Github</a>
+                    <ion-icon name="link-outline"></ion-icon>
                 </p>
             </div>
         </div>
@@ -50,7 +53,7 @@
             <div class="menu-item"><a href="index.html">home</a></div>
             <div class="menu-item"><a href="projects.html">projects</a></div>
             <div class="menu-item">art i like</div>
-            <div class="menu-item">info</div>
+            <div class="menu-item"><a href="info.html">info</a></div>
             <div class="menu-item">contact</div>
         </div>
     </div>
@@ -59,6 +62,7 @@
             projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects projects
         </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.1/gsap.min.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 </body>
 </html>
