--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<!-- TODO: WORK ON PROJECTS PAGE, FIND A WAY TO MAKE THE CARDS LOOK COOL -->
-<!-- TODO: MAKE SLIDER AND TOGGLE LOOK NICE AND ADD HIDING/ANIMATION EFFECTS PLEASE -->
 <!-- TODO: FIGURE OUT PHOTO STORAGE??? -->
-<!-- TODO: ADD EASTER EGG -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -17,9 +14,9 @@
             }
         }
     </script>
-  <script type="module" crossorigin src="/assets/main-CBG-BFrx.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/main-B2ZN297p.js">
-  <link rel="stylesheet" crossorigin href="/assets/main-CurDkPs5.css">
+  <script type="module" crossorigin src="/assets/main-CseUHZT9.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/main-Bf2mR_E6.js">
+  <link rel="stylesheet" crossorigin href="/assets/main-u3h6oT5a.css">
 </head>
 
 <body>
@@ -34,18 +31,17 @@
 
     <div id="three-js-container"></div>
 
-    <div class="controls-container">
-        <input type="range" id="light-rotation-slider" min="0" max="360" value="0">
-
-        <!-- code that I found from yt for a better toggle button -->
-        <!-- <input type="checkbox" class="toggle" id="ambient-light-switch" checked/>
-        <label for="default" data-checked="ON" data-unchecked="OFF"></label> -->
-
-        <label class="switch">
-            <input type="checkbox" id="ambient-light-switch" checked>
-            <span class="slider"></span>
-        </label>
+    <div id="open-circle" class="circle"></div>
+<div id="controls-container">
+    <div id="close-circle" class="circle"></div>
+    <input type="range" id="light-rotation-slider" min="0" max="360" value="0">
+    <div class="button-container">
+        <input type="radio" id="ambient-light-off" name="ambient-light" value="off" class="toggle toggle-left" checked>
+        <label for="ambient-light-off" class="btn">Off</label>
+        <input type="radio" id="ambient-light-on" name="ambient-light" value="on" class="toggle toggle-right">
+        <label for="ambient-light-on" class="btn">On</label>
     </div>
+</div>
 
     <div class="menu-container">
         <div class="col col-1">
@@ -56,7 +52,7 @@
             <div class="menu-item"><a href="index.html">home</a></div>
             <div class="menu-item"><a href="projects.html">projects</a></div>
             <div class="menu-item">art i like</div>
-            <div class="menu-item">info</div>
+            <div class="menu-item"><a href="info.html">info</a></div>
             <div class="menu-item">contact</div>
         </div>
     </div>
@@ -69,8 +65,6 @@
 
 
 
-
-        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/baffle/0.3.6/baffle.min.js"></script> -->
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.1/gsap.min.js"></script>
 
